# library-escape-game

./: .gitignore  CMakeLists.txt  README.md  main.cpp
SDL_lib/: SDL_bgi.cpp  SDL_bgi.h
include/: bookshelf.h  character.h  constants.h  engine.h  menu.h  obstacle.h  playground.h  settings.h  table.h  tool.h
src/: UI.cpp  bookshelf.cpp  character.cpp  engine.cpp  menu.cpp  obstacle.cpp  playground.cpp  settings.cpp  table.cpp  tool.cpp
